--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <title>Monthly Art – Flipbook</title>
+  <title>Monthly Art Vol.2 - Boiling Point</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <!-- PageFlip -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/page-flip/dist/css/page-flip.min.css">
@@ -25,7 +25,7 @@
 <body>
 <div class="app">
   <div class="toolbar">
-    <div class="field"><span id="bookTitle" style="font-weight:700">Monthly Art – Flipbook</span></div>
+    <div class="field"><span id="bookTitle" style="font-weight:700">Boiling Point: Emerging Artists & Spaces in Korea</span></div>
     <div class="spacer"></div>
     <div id="status" class="hint">Loading…</div>
     <button id="prev" class="btn">◀ Prev</button>
@@ -49,8 +49,8 @@
   </div>
 
   <div class="footer" style="justify-content:space-between">
-    <div class="hint">매니페스트(JSON)에서 이미지 목록을 불러옵니다. 다른 호는 <code>?manifest=...</code>로 지정하세요.</div>
-    <div class="hint">오류가 나면 브라우저 콘솔을 확인하세요(네트워크, CORS, 경로 등).</div>
+    <div class="hint">ⓒ Wolganmisool Publications, Inc.</div>
+    <div class="hint"></div>
   </div>
 </div>
 
