--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <input id="zoom" class="range" type="range" min="50" max="160" value="100">
       <span id="zoomLbl">100%</span>
     </div>
-    <!--<label class="field" title="양면/단면 전환"><input id="spread" type="checkbox" checked> Spread</label>**-->
+    <label class="field" title="양면/단면 전환"><input id="spread" type="checkbox" checked> Spread</label>
     <button id="fs" class="btn" title="전체화면">⛶ Full</button>
   </div>
 
